# tauri-plugin-audio

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  NATIVE_MOBILE_PLAN.md  README.md  build.rs  package-lock.json  package.json
.github/workflows/: ci.yml
crates/audio-player/: Cargo.toml  build.rs
crates/audio-player/src/: error.rs  lib.rs  metadata.rs  models.rs  net.rs  player.rs  transitions.rs
examples/tauri-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/tauri-app/src/: App.vue  style.css
examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: actions.ts  index.test.ts  index.ts  types.ts
ios/: Package.swift
ios/AudioPlayerKit/: Package.swift
ios/AudioPlayerKit/Sources/AudioPlayerKit/: AVPlayerAdapter.swift  AudioSessionController.swift  NowPlayingController.swift  PlaybackStateMachine.swift  PlayerStateSnapshot.swift  RemoteCommandController.swift
ios/AudioPlayerKit/Tests/AudioPlayerKitTests/: PlaybackStateMachineTests.swift
ios/Sources/: AudioPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: jump_to.toml  next.toml  prev.toml  set_loop.toml  set_loop_mode.toml  set_muted.toml  set_playback_rate.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
