[package]
name = "audio-player"
version = "0.1.0"
description = "Audio playback engine based on Rodio"
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
rodio = "0.19.0"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "wav", "flac", "ogg", "isomp4", "aac", "pcm"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
ureq = "2.12.1"
